--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Cette app a besoin d'accéder à vos photos pour ajouter des images à votre journal de voyage.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Cette app a besoin d'accéder à votre caméra pour prendre des photos pour votre journal.</string>
 </dict>
 </plist>
