--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.2
   path: ^1.8.3
-  image_picker: ^1.0.4  
-
+  image_picker: ^1.0.4
+  file_selector: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -21,3 +22,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
