--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,16 @@ environment:
   sdk: '>=3.4.4 <4.0.0'
 
 dependencies:
+  shared_preferences: ^2.3.3
+
+  crypto: ^3.0.5
   flutter:
     sdk: flutter
   sqflite: ^2.3.0
   path: ^1.8.3
-  image_picker: ^1.0.4  
+  image_picker: ^1.0.4
+
+
 
 dev_dependencies:
   flutter_test:
