--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,11 @@ dependencies:
     sdk: flutter
   sqflite: ^2.3.0
   path: ^1.8.3
-  image_picker: ^1.0.4  
+  path_provider: ^2.1.1
+  image_picker: ^1.0.4
+  share_plus: ^7.2.1
+  url_launcher: ^6.2.1
+  social_share: ^2.3.0
 
 dev_dependencies:
   flutter_test:
