--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   path: ^1.8.3
   image_picker: ^1.0.4
   file_selector: ^1.0.1
+  http: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -22,4 +23,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/config/weather.json
 
