--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.1.0
+  share_plus: ^7.2.2
+  http: ^1.1.0
   sqflite: ^2.3.0
-  path: ^1.8.3
+  path: ^1.8.0
   path_provider: ^2.1.1
-  image_picker: ^1.0.4
-  share_plus: ^7.2.1
   url_launcher: ^6.2.1
   social_share: ^2.3.0
 
